// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a simple Vimeo Video 1`] = `
<div>
  <div
    className="react-plyr"
    data-plyr-embed-id="https://vimeo.com/189789787"
    data-plyr-provider="vimeo"
  />
</div>
`;

exports[`renders a simple Youtube Video 1`] = `
<div>
  <div
    className="react-plyr"
    data-plyr-embed-id="CDFN1VatiJA"
    data-plyr-provider="youtube"
  />
</div>
`;
